--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ourbox</title>
+    <title>Simple Docs</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-    <%= javascript_pack_tag 'hello-world-bundle' %>
+    <%= javascript_pack_tag    'application' %>
+    <%= stylesheet_pack_tag    'application' %>
   </head>
 
   <body>
