--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,13 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <%= javascript_pack_tag    'application' %>
-    <%= stylesheet_pack_tag    'application' %>
   </head>
 
   <body>
     <%= yield %>
 
     <%= redux_store_hydration_data %>
+
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
