Render temporary file upload link on root page

--- a/app/views/folders/_file_upload_form.html.erb
+++ b/app/views/folders/_file_upload_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: folder, local: true) do |form| %>
-  <% if folder.errors.any? %>
+<%= form_with(url: folder_files_path, local: true) do |form| %>
+  <% if @folder.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(folder.errors.count, "error") %> prohibited this folder from being saved:</h2>
+      <h2><%= pluralize(@folder.errors.count, "error") %> prohibited this folder from being saved:</h2>
 
       <ul>
-      <% folder.errors.full_messages.each do |message| %>
+      <% @folder.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :folder_name %>
+    <%= form.label :files, "Add file" %><br>
+    <%= form.file_field :files, multiple: true %><br>
   </div>
 
   <div class="actions">
