--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -4,4 +4,6 @@
 
 <%= link_to 'New Folder', new_folder_path %>
 
+<%= link_to 'New File', edit_folder_path(@folder) %>
+
 <%= react_component("SimpleDocsApp") %>
