Add styling to folder forms

--- a/app/views/folders/_form.html.erb
+++ b/app/views/folders/_form.html.erb
@@ -1,27 +1,29 @@
-<%= form_with(model: folder, local: true) do |form| %>
-  <% if folder.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(folder.errors.count, "error") %> prohibited this folder from being saved:</h2>
+<div class="ui form">
+  <%= form_with(model: folder, local: true) do |form| %>
+    <% if folder.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(folder.errors.count, "error") %> prohibited this folder from being saved:</h2>
 
-      <ul>
-      <% folder.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% folder.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= form.label :name %>
+      <%= form.text_field :name, id: :folder_name %>
+    </div>
+
+    <div class="field">
+      <%= form.label :files, "Add file" %><br>
+      <%= form.file_field :files, multiple: true %><br>
+    </div>
+
+    <div class="actions">
+      <%= form.submit %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :folder_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :files, "Add file" %><br>
-    <%= form.file_field :files, multiple: true %><br>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
