--- a/app/views/folders/new.html.erb
+++ b/app/views/folders/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Folder</h1>
+<div class="ui center aligned raised very padded text container segment">
+  <h1>New Folder</h1>
 
-<%= render 'form', folder: @folder %>
+  <%= render 'form', folder: @folder %>
 
-<%= link_to 'Back', folders_path %>
+  <%= link_to 'Back', folders_path %>
+</div>
