--- a/app/views/folders/edit.html.erb
+++ b/app/views/folders/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Folder</h1>
+<div class="ui center aligned raised very padded text container segment">
+  <h1>Editing Folder</h1>
 
-<%= render 'form', folder: @folder %>
+  <%= render 'form', folder: @folder %>
 
-<%= link_to 'Show', @folder %> |
-<%= link_to 'Back', folders_path %>
+  <%= link_to 'Show', @folder %> |
+  <%= link_to 'Back', folders_path %>
+</div>
