Add semantic-ui dropdown menu for each folder

--- a/app/javascript/bundles/SimpleDocs/stylesheets/simple_docs.scss
+++ b/app/javascript/bundles/SimpleDocs/stylesheets/simple_docs.scss
@@ -6,3 +6,12 @@
   padding-left: 100px;
   overflow: scroll;
 }
+
+#folder-dropdown{
+  float: right;
+}
+
+.icon{
+  color: lightgray;
+  text-decoration: none;
+}
