--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -2,6 +2,6 @@
 
 <h1>Folders</h1>
 
-<%= link_to 'New Folder', new_folder_path %>
+<%= link_to 'New Folder', new_folder_path, remote: true %>
 
 <%= react_component("SimpleDocsApp") %>
