Add hidden field for folder_id in params

--- a/app/views/folders/_form.html.erb
+++ b/app/views/folders/_form.html.erb
@@ -13,6 +13,10 @@
     <% end %>
 
     <div class="field">
+      <%= form.hidden_field :folder_id, value: params[:folder_id] %>
+    </div>
+
+    <div class="field">
       <%= form.label :name %>
       <%= form.text_field :name, id: :folder_name %>
     </div>
