Fix link in readme.md

--- a/app/views/folders/_form.html.erb
+++ b/app/views/folders/_form.html.erb
@@ -13,7 +13,7 @@
     <% end %>
 
     <div class="field">
-      <%= form.hidden_field :folder_id, value: params[:folder_id] %>
+      <%= form.hidden_field :folder_id, value: folder.folder_id %>
     </div>
 
     <div class="field">
