--- a/app/views/files/_edit.html.erb
+++ b/app/views/files/_edit.html.erb
@@ -5,5 +5,27 @@
   </button>
 </div>
 <div class="modal-body">
-  <%= render 'form', folder: @folder %>
+  <div class="ui form">
+    <%= form_with(model: folder, url: folder_file_path, method: "patch") do |form| %>
+      <% if folder.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(folder.errors.count, "error") %> prohibited this folder from being saved:</h2>
+
+          <ul>
+          <% folder.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <div class="field">
+        <%= form.text_field :file %><br>
+      </div>
+
+      <div class="actions">
+        <%= form.submit "Submit" %>
+      </div>
+    <% end %>
+  </div>
 </div>
