--- a/app/views/files/_form.html.erb
+++ b/app/views/files/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="ui form">
-  <%= form_with(url: folder_files_path, method: "patch") do |form| %>
+  <%= form_with(model: folder, url: folder_files_path, method: "patch") do |form| %>
     <% if folder.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(folder.errors.count, "error") %> prohibited this folder from being saved:</h2>
@@ -13,7 +13,6 @@
     <% end %>
 
     <div class="field">
-      <%= form.label :files, "Add file" %><br>
       <%= form.file_field :files, multiple: true %><br>
     </div>
 
