Update layout and styling

--- a/app/javascript/bundles/SimpleDocs/stylesheets/simple_docs.scss
+++ b/app/javascript/bundles/SimpleDocs/stylesheets/simple_docs.scss
@@ -1,18 +1,3 @@
-#folder-form{
-  float: left;
-}
-
-#folder-list{
-  padding-left: 100px;
-  overflow: scroll;
-}
-
-#file-list{
-  position: relative;
-  left: 23px;
-  right: 23px;
-}
-
 #item-dropdown{
   float: right;
 }
@@ -29,6 +14,11 @@
 }
 
 ul{
+  list-style-type: none;
+  margin: 0px;
+}
+
+li{
   list-style-type: none;
   margin: 0px;
 }
