--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <header>
       <%= render "shared/nav" %>
     </header>
-    <div id='main_page_area'>
+    <div id='main-page-area'>
       <div>
         <% flash.each do |name, msg| %>
           <%= content_tag :div, msg, class: name %>
