--- a/app/javascript/bundles/SimpleDocs/stylesheets/simple_docs.scss
+++ b/app/javascript/bundles/SimpleDocs/stylesheets/simple_docs.scss
@@ -22,31 +22,20 @@
   padding-right: 1100px;
 }
 
-#item-dropdown {
-  float: right;
-}
-
-#item-dropdown-file {
-  float: right;
+#list{
   position: relative;
-  right: 23px;
+  left: -17px;
+  overflow: hidden;
 }
 
-.hover-background {
-  &:hover {
-    background-color: #edf2f7 !important;
-    position: relative;
-    /*width: 90%;*/
-/*    display: inline-flex;
-    resize: inherit;
-    overflow: auto;
-*/
-  }
+#filename {
+  position: relative;
+  left: 23px;
+}
 
-  &:hover:before {
-    position: absolute;
-    width: 2.5em;
-  }
+.item-dropdown {
+  float: right;
+  max-width: 20.02px;
 }
 
 .icon {
@@ -56,10 +45,22 @@
 
 ul {
   list-style-type: none;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 li {
   list-style-type: none;
-  margin: 0px;
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+}
+
+li div {
+  padding-left: 100%;
+  margin-left: -100%;
+}
+
+li > div:hover {
+  background-color: #edf2f7;
 }
