--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="ui top stackable fixed text menu">
+<div>
   <div class="link item">
     <h3>
       <%= link_to "SimpleDocs", root_path %>
