--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,18 +1,20 @@
-<h2>Resend unlock instructions</h2>
+<div class='add-margin'>
+  <h2>Resend unlock instructions</h2>
 
-<div class="ui small form">
-  <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-    <%= devise_error_messages! %>
+  <div class="ui small form">
+    <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+      <%= devise_error_messages! %>
 
-    <div class="four wide field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-    </div>
+      <div class="four wide field">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
 
-    <div class="actions">
-      <%= f.submit "Resend unlock instructions" %>
-    </div>
-  <% end %>
+      <div class="actions">
+        <%= f.submit "Resend unlock instructions" %>
+      </div>
+    <% end %>
 
-  <%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
+  </div>
 </div>
