--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,1 +1,16 @@
-<%= react_component("SimpleDocsApp") %>
+<div id="main-app">
+  <div id="react-component">
+    <%= react_component("SimpleDocsApp") %>
+  </div>
+  <div id="right-side-bar">
+    <div class="ui fluid secondary vertical menu">
+      <% if user_signed_in? %>
+        <%= link_to "Edit profile", edit_user_registration_path, class: "link item" %>
+        <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "link item" %>
+      <% else %>
+        <%= link_to "Sign up", new_user_registration_path, class: "link item" %>
+        <%= link_to "Login", new_user_session_path, class: "link item" %>
+      <% end %>
+    </div>
+  </div>
+</div>
