Add 'Upload' label to file form submit button

--- a/app/views/files/_new.html.erb
+++ b/app/views/files/_new.html.erb
@@ -24,7 +24,7 @@
       </div>
 
       <div class="actions">
-        <%= form.submit %>
+        <%= form.submit "Upload" %>
       </div>
     <% end %>
   </div>
