--- a/app/views/folders/_edit.html.erb
+++ b/app/views/folders/_edit.html.erb
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h5 class="modal-title">Editing Folder</h5>
+  <h5 class="modal-title">Rename Folder</h5>
   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
